@startuml
'https://plantuml.com/class-diagram

class Course {
String name
ArrayList<Instructor> instructors
ArrayList<Textbook> textbooks
getName()
setName()
getInstructors()
addInstructor()
getTextbooks()
addTextbook()
printCourseInfo()
}

class Instructor{
String firstName
String lastName
String officeNumber
getFirstName()
setFirstName()
getLastName()
setLastName()
getOfficeNumber()
setOfficeNumber()
}

class Textbook{
String title
String author
String publisher
getTitle()
setTitle()
getAuthor()
setAuthor()
getPublisher()
setPublisher()
}

Course o-- Instructor
Course o-- Textbook

@enduml